<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_corners"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/keyOneTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:contentDescription="keyOneTV"
            android:background="@drawable/custom_keyboard_key_bg"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:padding="20dp"
            android:text="1"
            android:textAlignment="center"
            android:textColor="@color/primary_black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/keyTwoTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:contentDescription="keyTwoTV"
            android:background="@drawable/custom_keyboard_key_bg"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:padding="20dp"
            android:text="2"
            android:textColor="@color/primary_black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/keyThreeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:contentDescription="keyThreeTV"
            android:background="@drawable/custom_keyboard_key_bg"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:padding="20dp"
            android:text="3"
            android:textColor="@color/primary_black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.34"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/keyFourTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="keyFourTV"
                    android:background="@drawable/custom_keyboard_key_bg"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="4"
                    android:textColor="@color/primary_black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/keyFiveTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="keyFiveTV"
                    android:background="@drawable/custom_keyboard_key_bg"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="5"
                    android:textColor="@color/primary_black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/keySixTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="keySixTV"
                    android:background="@drawable/custom_keyboard_key_bg"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="6"
                    android:textColor="@color/primary_black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.34"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/keySevenTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="keySevenTV"
                    android:background="@drawable/custom_keyboard_key_bg"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="7"
                    android:textColor="@color/primary_black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/keyEightTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="keyEightTV"
                    android:background="@drawable/custom_keyboard_key_bg"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="8"
                    android:textColor="@color/primary_black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/keyNineTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="keyNineTV"
                    android:background="@drawable/custom_keyboard_key_bg"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="9"
                    android:textColor="@color/primary_black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/keyZeroTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="keyZeroTV"
                    android:background="@drawable/custom_keyboard_key_bg"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="0"
                    android:textColor="@color/primary_black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/keyDotTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="keyDotTV"
                    android:background="@drawable/custom_keyboard_key_bg"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="."
                    android:textColor="@color/primary_black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/keyBackLL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="keyBackLL"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/backActionIV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/delete"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/keyActionCV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginHorizontal="@dimen/_21sdp"
        android:layout_marginTop="@dimen/_21sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:contentDescription="keyActionCV"
        android:background="@drawable/cursor_color"
        app:cardBackgroundColor="@color/inactive_green"
        app:cardCornerRadius="@dimen/_22sdp">

        <TextView
            android:id="@+id/keyActionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/opensans_bold"
            android:text="Generate QR Code"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />
    </androidx.cardview.widget.CardView>

</LinearLayout>