<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/FirstFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/et_bg_gray"
        android:orientation="vertical">

        <LinearLayout
...
                            android:layout_height="@dimen/_1sdp"
                            android:layout_marginTop="@dimen/_21sdp"
                            android:background="@color/button_bg" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/startSaleLL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_32sdp"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:layout_marginBottom="@dimen/_40sdp"
                        android:contentDescription="startSaleLL"
...
